--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Document</title>
-    <link rel="stylesheet" href="../css/null.css">
+    <link rel="stylesheet" href="../css/null.css" >
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <p>123</p>
+    <div>
+        <header>
+            <div>odico</div>
+            <div>
+                <div>Articles</div>
+                <div>Locations</div>
+                <div>Videos</div>
+                <div>Sign in</div>
+            </div>
+
+        </header>
+    </div>
 </body>
 </html>
