--- a/html/index.html
+++ b/html/index.html
@@ -5,22 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Document</title>
+    <title>Invoriem - html </title>
     <link rel="stylesheet" href="../css/null.css" >
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div>
-        <header>
-            <div>odico</div>
-            <div>
-                <div>Articles</div>
-                <div>Locations</div>
-                <div>Videos</div>
-                <div>Sign in</div>
-            </div>
-
-        </header>
-    </div>
+  
 </body>
 </html>
