--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,37 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="container">
+        <div class="header__top">
+            <nav class="nav">
+                <a href="#!" class="nav__logo">
+                    <img src="../sourses/image/logo.svg" alt="Invoriem project" srcset="">
+                </a>
+                <ul class="nav__list">
+                <li> <a href="#!" class="link">About us</a></li>
+                <li><a href="#!" class="btn">Let’s Talk <img src="../sourses/image/icons/arrow-right-black.svg" alt=""></a></li>
+                </ul>
+
+            </nav>
+        </div>
+
+        <div class="header__content">
+            <h1 class="header__title"> We build dreams, not just walls</h1>
+            <div class="header__text">
+                    <p>Fulfill your international property developments with us</p>
+            </div>
+            <div class="header_btn">
+                <a href="#!" class="btn">Let’s Talk</a>
+            </div>
+
+
+
+        </div>
+       
+
+        
+    </div>
+  </header>
 </body>
 </html>
