--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css" integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-  <header class="header none">
+  <header class="header">
     <div class="container">
         <div class="header__top">
             <nav class="nav">
@@ -82,7 +82,47 @@
     </div>
 </section>
 
+<section class="about">
+    <div class="container">
+        <div class="about__title">
+            <h2 class="title">We are Invoriem</h2>
+        </div>
+        <div class="about__text text">
+                <p>We fulfill international property developments</p>
+        </div>
+        <div class="about__content">
+            <div class="video video-overlay">
+                <button class="vidio__btn" id="video-btn">
+                    <img src="../sourses/image/icons/play-btn.svg" alt="play">
+                </button>
+                <img src="../sourses/image/vidio-picture.jpg" class="video__picture" alt="video">
+
+                <video src="../sourses/video/video-1.mp4" type="video/mp4" class="video__object" id="video-file" loop></video>
+            </div>
+
+            
+        </div>
+    </div>
+</section>
 </main>
+<footer class="footer">
+    <div class="container">
+        <div class="footer__row">
+            <div class="footer__copyright">Copyright © 2020 Invoriem
+
+            </div>
+            <div class="footer__nav">
+                <div class="footer_email"><a href="mailto:info@invoriem.com"> info@invoriem.com</a></div>
+                <div class="footer__socials">
+                    <a href="#!" class="social-icon"><img src="../sourses/image/icons/instagram.svg" alt="link"></a>
+                    <a href="#!" class="social-icon"><img src="../sourses/image/icons/facebook.svg" alt="link"></a>
+                    <a href="#!" class="social-icon"><img src="../sourses/image/icons/twitter.svg" alt="link"></a>
+                    <a href="#!" class="social-icon"><img src="../sourses/image/icons/linkedIn.svg" alt="link"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 
